Correct main grid layout if content gets too large

--- a/src/html/css/stu.css
+++ b/src/html/css/stu.css
@@ -31,18 +31,17 @@ ul {
 div.container {
   display: grid;
   grid-template-columns: 120px auto;
-  grid-template-rows: 80px auto 30px; height: 100%;
+  grid-template-rows: 80px auto 30px;
+  height: 100%;
 }
 
 div.innerContent {
   width: 100%;
-  height: 100%;
-  min-height: 100%;
   padding: 10px 5px 0 5px;
 }
 
 div.sidebar {
-  grid-row-start: span 2;
+  grid-row: 2 / span 2;
   width: 120px;
   background-color: #121220;
   height: 100%;
